# python-cloud-tasks-deferred

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
src/cloud_tasks_deferred/: deferred.py  wsgi.py
tests/: test_deferred.py  test_wsgi.py
