[metadata]
name = cloud-tasks-deferred
description = An unfinished deferred library for Google Cloud Tasks
long_description = file: README.rst
url = https://github.com/grktsh/python-cloud-tasks-deferred
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
package_dir =
    = src
install_requires =
    google-cloud-tasks ~= 1.3

[options.extras_require]
test =
    pytest >= 4.4, < 6
    pytest-cov ~= 2.6
    pytest-mock ~= 1.10
    pytest-xdist ~= 1.28
    falcon ~= 2.0

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[coverage:run]
branch = True
parallel = True
source =
    cloud_tasks_deferred
omit =
    */cloud_tasks_deferred/__version__.py

[coverage:paths]
source =
    src
    */site-packages

[coverage:report]
show_missing = True

[tool:pytest]
testpaths = tests

[flake8]
ignore =
    E203
    W503
